fix(console): remove duplicated onboarding form spacing

--- a/packages/console/src/pages/OssOnboarding/index.module.scss
+++ b/packages/console/src/pages/OssOnboarding/index.module.scss
@@ -57,7 +57,6 @@
   margin-top: _.unit(6);
   display: flex;
   flex-direction: column;
-  gap: _.unit(6);
 }
 
 .emailSection {
